# Nexus-X

./: README.md  build-installer.bat  license.txt  package-lock.json  package.json  vite.config.ts
src/: App.css  App.tsx  index.css
src-tauri/: .gitignore  Cargo.toml  build.rs  license.txt  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  lol.rs  main.rs  network.rs
